dark mode and touches

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> <!--Pacifico-->
+    <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/funciones.js"></script>
 </head>
@@ -17,19 +17,23 @@
                 <li><a href="">generador de libros</a></li>
             </ul>
             <img class="logo" src="img/gyoza.png" alt="logo">
-            <img class="modo-oscuro" src="img/moon.png" alt="modo oscuro">
+            <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="titulo visible">
             <div>
-                <h1>¡Bienvenido al club de la Gyoza!</h1>
-                <button>Conoce el club ⭐</button>
+                <h1>El Club de la Gyoza</h1>
+                <button>Conoce el club 🌼</button>
             </div>
         </div>
         <div class="info">
             <h1>¿Qué es el club de la Gyoza?</h1>
-            <p>Descripción del club: Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempore aspernatur repellendus, mollitia recusandae a commodi animi provident sunt vitae, iusto iste cumque quo quos dolores quasi doloremque reprehenderit soluta!</p>
-            <button>Volver ⭐</button>
+            <p>Érase una vez dos amigas amantes de los libros y de las gyozas, que un día se preguntaron: "Oye, ¿y si leemos un libro a la vez y lo comentamos?" Y después de ese primer libro, llegó otro. Y después otro. Y a ese le siguieron muchos más. Así fue como nació el <span>Club de la Gyoza</span>, donde las dos amigas comenzaron a hacer lecturas conjuntas y a comentarlas mientras disfrutaban de unas gyozas (aunque nunca le dicen que no a una buena tarta de queso).</p>
+            <p>En este espacio encontrarás nuestras reseñas de las lecturas realizadas en el club y, tal vez, ¡tu próxima lectura! 🪄⭐</p>
+            <button>Volver 🌼</button>
         </div>
+        <footer class="footer">
+            <p>LECTURA ACTUAL... En proceso de buscar una nueva lectura ✨</p>
+        </footer>
     </section>
 </body>
 </html>
