add comments estilo css

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="titulo visible">
-            <div>
-                <h1>El Club de la Gyoza</h1>
-                <button>Conoce el club 🌼</button>
-            </div>
+            <h1>El Club de la Gyoza</h1>
+            <button>Conoce el club 🌼</button>
         </div>
         <div class="info">
             <h1>¿Qué es el club de la Gyoza?</h1>
@@ -31,7 +29,7 @@
             <p>En este espacio encontrarás nuestras reseñas de las lecturas realizadas en el club y, tal vez, ¡tu próxima lectura! 🪄⭐</p>
             <button>Volver 🌼</button>
         </div>
-        <footer class="footer">
+        <footer>
             <p>LECTURA ACTUAL... En proceso de buscar una nueva lectura ✨</p>
         </footer>
     </section>
