nosotras section first draft

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="contenedor">
         <nav>
             <ul>
-                <li><a href="">nosotras</a></li>
+                <li><a href="nosotras.html">nosotras</a></li>
                 <li><a href="">reseñas</a></li>
                 <li><a href="">generador de libros</a></li>
             </ul>
@@ -20,6 +20,7 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="titulo visible">
+            <img src="img/gyo.png" alt="gyoza">
             <h1>El Club de la Gyoza</h1>
             <button>Conoce el club 🌼</button>
         </div>
@@ -30,7 +31,7 @@
             <button>Volver 🌼</button>
         </div>
         <footer>
-            <p>LECTURA ACTUAL... En proceso de buscar una nueva lectura ✨</p>
+            <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
         </footer>
     </section>
 </body>
