--- a/nosotras.html
+++ b/nosotras.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="nosotras.html">nosotras</a></li>
-                <li><a href="">reseñas</a></li>
-                <li><a href="">generador de libros</a></li>
+                <li><a href="libros.html">reseñas</a></li>
+                <li><a href="generador.html">generador de libros</a></li>
             </ul>
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
