--- a/generador.html
+++ b/generador.html
@@ -19,16 +19,8 @@
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
-        <div class="titulo visible">
-            <img src="img/gyo.png" alt="gyoza">
-            <h1>El Club de la Gyoza</h1>
-            <button>Conoce el club 🌼</button>
-        </div>
-        <div class="info">
-            <h1>¿Qué es el club de la Gyoza?</h1>
-            <p>Érase una vez dos amigas amantes de los libros y de las gyozas, que un día se preguntaron: "Oye, ¿y si leemos un libro a la vez y lo comentamos?" Y después de ese primer libro, llegó otro. Y después otro. Y a ese le siguieron muchos más. Así fue como nació el <span>Club de la Gyoza</span>, donde las dos amigas comenzaron a hacer lecturas conjuntas y a comentarlas mientras disfrutaban de unas gyozas (aunque nunca le dicen que no a una buena tarta de queso).</p>
-            <p>En este espacio encontrarás nuestras reseñas de las lecturas realizadas en el club y, tal vez, ¡tu próxima lectura! 🪄⭐</p>
-            <button>Volver 🌼</button>
+        <div>
+            
         </div>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
