nosotras and bio

--- a/nosotras.html
+++ b/nosotras.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/funciones.js"></script>
+    <script defer src="js/nosotras_fun.js"></script>
 </head>
 <body>
     <section class="contenedor">
@@ -19,17 +19,41 @@
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
-        <section class="perfiles">
-            <p>Haz click a las imagenes para conocer a las integrantes del Club de la Gyoza</p>
-            <div class="ana">
-                <img src="img/ana.png" alt="retrato de Ana">
+        <section class="contenido ver">
+            <p>El Club de la Gyoza tiene dos componentes. Haz click a las imagenes para conocernos ✨</p>
+            <section class="perfiles">
+                <div class="ana">
+                    <img src="img/ana.png" alt="retrato de Ana">
+                </div>
+                <div class="laura">
+                    <img src="img/laura.png" alt="retrato de Laura">
+                </div>
+            </section>
+        </section>
+        <section class="uno">
+            <button class="flecha">&lt;</button>
+            <img src="img/ana.png" alt="retrato de Ana">
+            <p>Lorem ipsum dolor sit amet consectetur...</p>
+            <div class="enlaces">
+                <a href="https://linkedin.com/in/laura-mora-romero" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
             </div>
-            <div class="laura">
-                <img src="img/laura.png" alt="retrato de Laura">
+        </section>
+        <section class="dos">
+            <button class="flecha">&lt;</button>
+            <img src="img/laura.png" alt="retrato de Laura">
+            <p>Desde que era pequeña, a Laura siempre le ha encantado leer. Recuerda cómo su madre, muchas veces cuando volvía del trabajo, le traía un libro nuevo que no tardaba en devorar, y le leía los libros de <em>Pirata Garrapata</em>.</p>
+            <p>Pero el momento en el que se enamoró de la lectura fue al descubrir <em>Crepúsculo</em> y <em>Los juegos del hambre</em>, para luego adentrarse en el mundo de la fantasía, del que ya no pudo escapar. Aunque también disfruta de vez en cuando de literatura contemporánea y de leer poesía.</p>
+            <p>Y, aunque ha tenido momentos en los que no se llevaba bien con la lectura, su pasión por los libros siempre ha estado presente. Por eso, uno de sus primeros proyectos de programación web es esta misma página, para poder guardar las reseñas del club de lectura que tiene junto a su mejor amiga.</p>
+            <p><strong>Géneros favoritos</strong>: fantasía, romantasy.</p>
+            <p><strong>Libros favoritos</strong>: <em>Orgullo y prejuicio</em>, <em>Cazadores de sombras</em>, <em>Al final mueren los dos</em>.</p>
+            <div class="enlaces">
+                <a href="https://linkedin.com/in/laura-mora-romero" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
+                <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
             </div>
         </section>
         <footer>
-            <p>LECTURA ACTUAL... En proceso de buscar una nueva lectura ✨</p>
+            <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</p>
         </footer>
     </section>
 </body>
