add book generator

--- a/nosotras.html
+++ b/nosotras.html
@@ -33,20 +33,21 @@
         <section class="uno">
             <button class="flecha">&lt;</button>
             <img src="img/ana.png" alt="retrato de Ana">
-            <p>Lorem ipsum dolor sit amet consectetur...</p>
+            <p>Ana es historiadora de formación, analista de datos por curiosidad y lectora por vocación. Actualmente, su obsesión es el romantasy, aunque siempre está buscando nuevas historias que la atrapen. Siempre la acompaña Noa, su perra y fiel compañera de lecturas, aunque ella prefiere las historias que sueña.</p>
+            <p><strong>Géneros favoritos</strong>: romantasy, thriller.</p>
+            <p><strong>Libros favoritos</strong>: <em>Alas de Sangre</em>, <em>Cumbres Borrascosas</em>.</p>
             <div class="enlaces">
-                <a href="https://linkedin.com/in/laura-mora-romero" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
-                <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
+                <a href="" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
             </div>
         </section>
         <section class="dos">
             <button class="flecha">&lt;</button>
             <img src="img/laura.png" alt="retrato de Laura">
-            <p>Desde que era pequeña, a Laura siempre le ha encantado leer. Recuerda cómo su madre, muchas veces cuando volvía del trabajo, le traía un libro nuevo que no tardaba en devorar, y le leía los libros de <em>Pirata Garrapata</em>.</p>
-            <p>Pero el momento en el que se enamoró de la lectura fue al descubrir <em>Crepúsculo</em> y <em>Los juegos del hambre</em>, para luego adentrarse en el mundo de la fantasía, del que ya no pudo escapar. Aunque también disfruta de vez en cuando de literatura contemporánea y de leer poesía.</p>
-            <p>Y, aunque ha tenido momentos en los que no se llevaba bien con la lectura, su pasión por los libros siempre ha estado presente. Por eso, uno de sus primeros proyectos de programación web es esta misma página, para poder guardar las reseñas del club de lectura que tiene junto a su mejor amiga.</p>
-            <p><strong>Géneros favoritos</strong>: fantasía, romantasy.</p>
-            <p><strong>Libros favoritos</strong>: <em>Orgullo y prejuicio</em>, <em>Cazadores de sombras</em>, <em>Al final mueren los dos</em>.</p>
+            <div class="bio">
+                <p>Desde pequeña, Laura ha sido una apasionada de la lectura, pero se enamoró de verdad de los libros al descubrir <em>Crepúsculo</em> y <em>Los juegos del hambre</em>, lo que la llevó a adentrarse en el mundo de la fantasía. En parte, esa pasión por los libros la llevó a convertirse en historiadora, aunque, por los caminos de la vida, ahora se ha encontrado con la programación web. Por eso, uno de sus primeros proyectos es esta página, creada para guardar las reseñas del club de lectura que tiene junto a su mejor amiga.</p>
+                <p><strong>Géneros favoritos</strong>: fantasía, .</p>
+                <p><strong>Libros favoritos</strong>: <em>Orgullo y prejuicio</em>, <em>Al final mueren los dos</em>.</p>
+            </div>
             <div class="enlaces">
                 <a href="https://linkedin.com/in/laura-mora-romero" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
                 <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
