add reseñas without links + some touches

--- a/generador.html
+++ b/generador.html
@@ -20,11 +20,11 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <section class="generador">
-            <h1>Generador de lecturas aleatorias</h1>
-            <p>Instrucciones: Escribe un título en la caja de texto y pulsa <strong>"Añadir"</strong> para añadir tu título a la lista. Una vez tengas todos los títulos que quieras, pulsa <strong>"Generar"</strong> para ver tu próxima lectura. Si quieres nuevos títulos, simplemente pulsa <strong>"Limpiar"</strong> y repite los pasos anteriores.</p>
+            <h1><strong>Generador de lecturas</strong></h1>
+            <p>¿Cómo funciona? Escribe un título en la caja y pulsa <strong>"Añadir"</strong> para sumarlo a la lista. Cuando tengas todos los que quieras, haz click en <strong>"Generar"</strong> y descubre qué leer después. Si la primera opción no te gusta, ¡siempre puedes volver a pulsar <strong>"Generar"</strong>! ¿No te convencen los libros que has añadido? Pulsa <strong>"Limpiar"</strong> y empieza de nuevo.</p>
             
             <form>
-                <input type="text" placeholder="Escriba un título">
+                <input type="text" placeholder="Escribe aquí el título de un libro">
                 <div class="botones">
                     <input type="submit" value="Añadir 🌼" class="add">
                     <input type="button" value="Generar ✨" class="generate">
