--- a/libros.html
+++ b/libros.html
@@ -20,8 +20,46 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div>
-
-        </div>
+            <!-- <section class="galeria">
+                <div class="slider">
+                    <a href=""><img src="portadas/donde_no_puedas_encontrarme.jpg" alt="Donde no puedas encontrarme"></a>
+                    <a href=""><img src="portadas/almendra.jpg" alt="Almendra"></a>
+                    <a href=""><img src="portadas/erase_una_vez_un_corazon_roto.jpg" alt="Érase una vez un corazón rotp"></a>
+                    <a href=""><img src="portadas/un_reino_de_promesas_malditas.jpg" alt=""></a>
+                    <a href=""><img src="portadas/todos_los_angeles_del_infierno.jpg" alt=""></a>
+                    <a href=""><img src="portadas/aprendiz_del_villano.jpg" alt=""></a>
+                    <a href=""><img src="portadas/alas_de_sangre.jpg" alt=""></a>
+                    <a href=""><img src="portadas/alas_de_hierro.jpg" alt=""></a>
+                    <a href=""><img src="portadas/un_corazon_por_navidad.jpg" alt=""></a>
+                    <a href=""><img src="portadas/el_vals_de_la_bruja.jpg" alt=""></a>
+                    <a href=""><img src="portadas/alas_de_onix.jpg" alt=""></a>
+                    <a href=""><img src="portadas/vamos_a_morir_todos.jpg" alt=""></a>
+                    <a href=""><img src="portadas/black_bird_1.jpg" alt=""></a>
+                    <a href=""><img src="portadas/no_confies_en_asher_hall.jpg" alt=""></a>
+                    <a href=""><img src="portadas/misha_zhukov_debe_morir.jpg" alt=""></a>
+                    <a href=""><img src="portadas/la_sanadora_de_zalindov.jpg" alt=""></a>
+                </div>
+            </section> -->
+            <section class="libros">
+                <ul>
+                    <li><a href="">Donde no puedas encontrarme - <em>Tamara Molina</em></a></li>
+                    <li><a href="">Almendra - <em>Won-Pyung Sohn</em></a></li>
+                    <li><a href="">Érase una vez un corazón roto - <em>Stephanie Garber</em></a></li>
+                    <li><a href="">Un reino de promesas malditas - <em>Lexi Ryan</em></a></li>
+                    <li><a href="">Todos los ángeles del infierno - <em>Miriam Mosquera</em></a></li>
+                    <li><a href="">Aprendiz del villano - <em>Hannah Nicole Maehrer</em></a></li>
+                    <li><a href="">Alas de sangre - <em>Rebecca Yarros</em></a></li>
+                    <li><a href="">Alas de Hierro - <em>Rebecca Yarros</em></a></li>
+                    <li><a href="">Un corazón por Navidad - <em>Sophie Jomain</em></a></li>
+                    <li><a href="">El vals de la bruja - <em>Belén Martínez</em></a></li>
+                    <li><a href="">Alas de Ónix - <em>Rebecca Yarros</em></a></li>
+                    <li><a href="">Vamos a morir todos - <em>Emily Austin</em></a></li>
+                    <li><a href="">Black Bird Academy: Muerte a la oscuridad - <em>Stella Tack</em></a></li>
+                    <li><a href="">No confíes en Asher Hall - <em>Myriam M. Lejardi</em></a></li>
+                    <li><a href="">Misha Zhukov debe morir - <em>Myriam M. Lejardi</em></a></li>
+                    <li><a href="">La sanadora de Zalindov - <em>Lynette Noni</em></a></li>
+                </ul>
+            </section>
         </div>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
