--- a/nosotras.html
+++ b/nosotras.html
@@ -37,7 +37,7 @@
             <p><strong>Géneros favoritos</strong>: romantasy, thriller.</p>
             <p><strong>Libros favoritos</strong>: <em>Alas de Sangre</em>, <em>Cumbres Borrascosas</em>.</p>
             <div class="enlaces">
-                <a href="" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/ana-gonz%C3%A1lez-121979185/" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
             </div>
         </section>
         <section class="dos">
