fixing some errors

--- a/libros.html
+++ b/libros.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/funciones.js"></script>
+    <link rel="stylesheet" href="css/style_libros.css">
+    <script defer src="js/libros_fun.js"></script>
 </head>
 <body>
     <section class="contenedor">
@@ -19,7 +20,7 @@
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
-        <div>
+        <section class="enlaces">
             <!-- <section class="galeria">
                 <div class="slider">
                     <a href=""><img src="portadas/donde_no_puedas_encontrarme.jpg" alt="Donde no puedas encontrarme"></a>
@@ -40,6 +41,11 @@
                     <a href=""><img src="portadas/la_sanadora_de_zalindov.jpg" alt=""></a>
                 </div>
             </section> -->
+            <div class="button">
+                <button class="title">Ordenar por título</button>
+                <button class="author">Ordenar por autor/a</button>
+                <button class="reset">Orden de lectura</button>
+            </div>
             <section class="libros">
                 <ul>
                     <li><a href="">Donde no puedas encontrarme - <em>Tamara Molina</em></a></li>
@@ -60,7 +66,7 @@
                     <li><a href="">La sanadora de Zalindov - <em>Lynette Noni</em></a></li>
                 </ul>
             </section>
-        </div>
+        </section>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
         </footer>
