--- a/nosotras.html
+++ b/nosotras.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_nosotras.css">
     <script defer src="js/nosotras_fun.js"></script>
 </head>
 <body>
@@ -20,7 +21,7 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <section class="contenido ver">
-            <p>El Club de la Gyoza tiene dos componentes. Haz click a las imagenes para conocernos ✨</p>
+            <p>¡Haz click a las imagenes para conocernos! ✨</p>
             <section class="perfiles">
                 <div class="ana">
                     <img src="img/ana.png" alt="retrato de Ana">
@@ -33,10 +34,10 @@
         <section class="uno">
             <button class="flecha">&lt;</button>
             <img src="img/ana.png" alt="retrato de Ana">
-            <p>Ana es historiadora de formación, analista de datos por curiosidad y lectora por vocación. Actualmente, su obsesión es el romantasy, aunque siempre está buscando nuevas historias que la atrapen. Siempre la acompaña Noa, su perra y fiel compañera de lecturas, aunque ella prefiere las historias que sueña.</p>
+            <p><strong>Ana</strong> es historiadora de formación, analista de datos por curiosidad y lectora por vocación. Actualmente, su obsesión es el romantasy, aunque siempre está buscando nuevas historias que la atrapen. Siempre la acompaña Noa, su perra y fiel compañera de lecturas, aunque ella prefiere las historias que sueña.</p>
             <p><strong>Géneros favoritos</strong>: romantasy, thriller.</p>
             <p><strong>Libros favoritos</strong>: <em>Alas de Sangre</em>, <em>Cumbres Borrascosas</em>.</p>
-            <div class="enlaces">
+            <div class="links">
                 <a href="https://www.linkedin.com/in/ana-gonz%C3%A1lez-121979185/" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
             </div>
         </section>
@@ -44,11 +45,11 @@
             <button class="flecha">&lt;</button>
             <img src="img/laura.png" alt="retrato de Laura">
             <div class="bio">
-                <p>Desde pequeña, Laura ha sido una apasionada de la lectura, pero se enamoró de verdad de los libros al descubrir <em>Crepúsculo</em> y <em>Los juegos del hambre</em>, lo que la llevó a adentrarse en el mundo de la fantasía. En parte, esa pasión por los libros la llevó a convertirse en historiadora, aunque, por los caminos de la vida, ahora se ha encontrado con la programación web. Por eso, uno de sus primeros proyectos es esta página, creada para guardar las reseñas del club de lectura que tiene junto a su mejor amiga.</p>
-                <p><strong>Géneros favoritos</strong>: fantasía, .</p>
+                <p>Desde pequeña,<strong>Laura</strong> ha sido una apasionada de la lectura, pero se enamoró de verdad de los libros al descubrir <em>Crepúsculo</em> y <em>Los juegos del hambre</em>, lo que la llevó a adentrarse en el mundo de la fantasía. En parte, esa pasión por los libros la llevó a convertirse en historiadora, aunque, por los caminos de la vida, ahora se ha encontrado con la programación web. Por eso, uno de sus primeros proyectos es esta página, creada para guardar las reseñas del club de lectura que tiene junto a su mejor amiga.</p>
+                <p><strong>Géneros favoritos</strong>: fantasía, romantasy.</p>
                 <p><strong>Libros favoritos</strong>: <em>Orgullo y prejuicio</em>, <em>Al final mueren los dos</em>.</p>
             </div>
-            <div class="enlaces">
+            <div class="links">
                 <a href="https://linkedin.com/in/laura-mora-romero" class="linkedin"><img src="img/linkedin.png" alt="linkedin"></a>
                 <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
             </div>
