--- a/generador.html
+++ b/generador.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_generador.css">
     <script defer src=""></script>
 </head>
 <body>
