--- a/libros.html
+++ b/libros.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style_libros.css">
-    <script defer src="js/libros_fun.js"></script>
+    <script defer src="js/funciones.js"></script>
 </head>
 <body>
     <section class="contenedor">
