add json reviews

--- a/review.html
+++ b/review.html
@@ -20,7 +20,17 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="review">
-            
+            <div class="libro">
+                <img class="portada" src="portadas/donde_no_puedas_encontrarme.jpg" alt="Portada del libro">
+                <div class="informacion">
+                    <h2>Donde no puedas encontrarme</h2>
+                    <p><strong>Autor/a:</strong> Tamara Molina</p>
+                    <p><strong>Género:</strong> Romance</p>
+                    <p><strong>Páginas:</strong> R544</p>
+                    <p><strong>Fecha de publicación:</strong> 2024</p>
+                    <p><strong>Leido en:</strong> Septiembre 2024</p>
+                </div>
+            </div>
         </div>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
