fixing some things

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         </nav>
         <div class="titulo visible">
             <img src="img/gyo.png" alt="gyoza">
-            <h1>El Club de la Gyoza</h1>
-            <button>Conoce el club 🌼</button>
+            <div>
+                <h1>El Club de la Gyoza</h1>
+                <button>Conoce el club 🌼</button>
+            </div>
         </div>
         <div class="info">
             <h1>¿Qué es el club de la Gyoza?</h1>
