--- a/review.html
+++ b/review.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/style_resenas.css">
 </head>
 <body>
     <section class="contenedor">
@@ -20,17 +20,25 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="review">
+            <h2>Titulo</h2>
             <div class="libro">
                 <img class="portada" src="portadas/donde_no_puedas_encontrarme.jpg" alt="Portada del libro">
                 <div class="informacion">
-                    <h2>Donde no puedas encontrarme</h2>
-                    <p><strong>Autor/a:</strong> Tamara Molina</p>
-                    <p><strong>Género:</strong> Romance</p>
-                    <p><strong>Páginas:</strong> R544</p>
-                    <p><strong>Fecha de publicación:</strong> 2024</p>
-                    <p><strong>Leido en:</strong> Septiembre 2024</p>
+                    <p><strong>Autor/a:</strong> </p>
+                    <p><strong>Género:</strong> </p>
+                    <p><strong>Páginas:</strong> </p>
+                    <p><strong>Fecha de publicación:</strong> </p>
+                    <p><strong>Leido en:</strong> </p>
                 </div>
             </div>
+            <article class="resena">
+                <div class="a">
+
+                </div>
+                <div class="l">
+                    
+                </div>
+            </article>
         </div>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
