add media queries

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <li><a href="libros.html">reseñas</a></li>
                 <li><a href="generador.html">generador de libros</a></li>
             </ul>
+            <img class="menu" src="img/book.png" alt="menú">
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <div class="titulo visible">
-            <img src="img/gyo.png" alt="gyoza">
             <div>
                 <h1>El Club de la Gyoza</h1>
                 <button>Conoce el club 🌼</button>
