--- a/generador.html
+++ b/generador.html
@@ -17,6 +17,7 @@
                 <li><a href="libros.html">reseñas</a></li>
                 <li><a href="generador.html">generador de libros</a></li>
             </ul>
+            <img class="menu" src="img/book.png" alt="menú">
             <a href="index.html"><img class="logo" src="img/gyoza.png" alt="logo"></a>
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
