fixing some css issues

--- a/review.html
+++ b/review.html
@@ -23,7 +23,7 @@
         <div class="review">
             <h2>Titulo</h2>
             <div class="libro">
-                <img class="portada" src="portadas/donde_no_puedas_encontrarme.jpg" alt="Portada del libro">
+                <img class="portada" src="" alt="Portada del libro">
                 <div class="informacion">
                     <p><strong>Autor/a:</strong> </p>
                     <p><strong>Género:</strong> </p>
@@ -34,10 +34,14 @@
             </div>
             <article class="resena">
                 <div class="a">
-
+                    <img src="img/ana.png" alt="retrato de Ana">
+                    <p class="puntuacion"></p>
+                    <p></p>
                 </div>
                 <div class="l">
-                    
+                    <img src="img/laura.png" alt="retrato de Laura">
+                    <p class="puntuacion"></p>
+                    <p></p>
                 </div>
             </article>
         </div>
