--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <div class="titulo visible">
             <div>
                 <h1>El Club de la Gyoza</h1>
-                <button>Conoce el club 🌼</button>
+                <button>Conoce el club 🥟</button>
             </div>
         </div>
         <div class="info">
             <h1>¿Qué es el club de la Gyoza?</h1>
             <p>Érase una vez dos amigas amantes de los libros y de las gyozas, que un día se preguntaron: "Oye, ¿y si leemos un libro a la vez y lo comentamos?" Y después de ese primer libro, llegó otro. Y después otro. Y a ese le siguieron muchos más. Así fue como nació el <span>Club de la Gyoza</span>, donde las dos amigas comenzaron a hacer lecturas conjuntas y a comentarlas mientras disfrutaban de unas gyozas (aunque nunca le dicen que no a una buena tarta de queso).</p>
             <p>En este espacio encontrarás nuestras reseñas de las lecturas realizadas en el club y, tal vez, ¡tu próxima lectura! 🪄⭐</p>
-            <button>Volver 🌼</button>
+            <button>Volver 🥟</button>
         </div>
         <footer>
             <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
