--- a/libros.html
+++ b/libros.html
@@ -22,31 +22,12 @@
             <img class="oscuro" src="img/moon.png" alt="modo oscuro">
         </nav>
         <section class="enlaces">
-            <!-- <section class="galeria">
-                <div class="slider">
-                    <a href=""><img src="portadas/donde_no_puedas_encontrarme.jpg" alt="Donde no puedas encontrarme"></a>
-                    <a href=""><img src="portadas/almendra.jpg" alt="Almendra"></a>
-                    <a href=""><img src="portadas/erase_una_vez_un_corazon_roto.jpg" alt="Érase una vez un corazón rotp"></a>
-                    <a href=""><img src="portadas/un_reino_de_promesas_malditas.jpg" alt=""></a>
-                    <a href=""><img src="portadas/todos_los_angeles_del_infierno.jpg" alt=""></a>
-                    <a href=""><img src="portadas/aprendiz_del_villano.jpg" alt=""></a>
-                    <a href=""><img src="portadas/alas_de_sangre.jpg" alt=""></a>
-                    <a href=""><img src="portadas/alas_de_hierro.jpg" alt=""></a>
-                    <a href=""><img src="portadas/un_corazon_por_navidad.jpg" alt=""></a>
-                    <a href=""><img src="portadas/el_vals_de_la_bruja.jpg" alt=""></a>
-                    <a href=""><img src="portadas/alas_de_onix.jpg" alt=""></a>
-                    <a href=""><img src="portadas/vamos_a_morir_todos.jpg" alt=""></a>
-                    <a href=""><img src="portadas/black_bird_1.jpg" alt=""></a>
-                    <a href=""><img src="portadas/no_confies_en_asher_hall.jpg" alt=""></a>
-                    <a href=""><img src="portadas/misha_zhukov_debe_morir.jpg" alt=""></a>
-                    <a href=""><img src="portadas/la_sanadora_de_zalindov.jpg" alt=""></a>
-                </div>
-            </section> -->
             <div class="button">
                 <button class="title">Ordenar por título</button>
                 <button class="author">Ordenar por autor/a</button>
                 <button class="reset">Orden de lectura</button>
             </div>
+            <p>Disclaimer: es posible que encuentres spoilers en las reseñas. Ve con precaución 🕵️.</p>
             <section class="libros">
                 <ul>
                     <li><a href="">Donde no puedas encontrarme - <em>Tamara Molina</em></a></li>
